# rules_ios

./: BUILD.bazel
data/: BUILD.bazel
data_generators/: BUILD.bazel
docs/: BUILD.bazel
repository_rules/: BUILD.bazel
rules/: BUILD.bazel
rules/analysis_tests/: BUILD.bazel
rules/apple_platform/: BUILD.bazel
rules/framework/: BUILD.bazel
rules/hmap/: BUILD.bazel
rules/internal/: BUILD.bazel
rules/test_host_app/: BUILD.bazel
tests/: BUILD.bazel  xcodeproj-tests.sh
tests/ios/: BUILD.bazel
tests/macos/: BUILD.bazel
tools/m1_utils/: BUILD.bazel  update_in_place.sh
tools/xcode_version_computation/: BUILD.bazel
tools/xcodeproj_shims/: BUILD.bazel  ld-stub.sh
tools/xctest_absolute_source_locations/: BUILD.bazel
